update assignment 3 files

--- a/Assignment 3 - Sign Language/Assignment3SignLanguage.ipynb
+++ b/Assignment 3 - Sign Language/Assignment3SignLanguage.ipynb
@@ -10,7 +10,7 @@
         "\n",
         "## Sign Language Image Classification using Deep Learning\n",
         "\n",
-        "### Timo Brady\n",
+        "### Timo\n",
         "\n",
         "**A Custom-Built Stochastic Method with Structured Refinement for Artificial Neural Network Architecture Search and Optimization**\n",
         "\n",
